Add media folder, working on fleshing out channel

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 
     <!-- Modfying some stuff for the home page -->
     <style type="text/css">
+		.pusher {
+			background-color: #1b1c1d !important;
+
+		}
         .hidden.menu {
             display: none;
         }
@@ -93,6 +97,7 @@
 
         .footer.segment {
             padding: 5em 0em;
+			bottom: 0;
         }
 
         .secondary.pointing.menu .toc.item {
