Add missing dependencies for the css

--- a/register.html
+++ b/register.html
@@ -10,7 +10,8 @@
     <!-- Site Properties -->
     <!-- Might have to fix these links on linux to match directory style-->
     <!-- ../dist/components/-->
-    <title>MeTube</title>
+    <title>Register</title>
+    <link href="Content/semantic.css" rel="stylesheet" />
     <link href="Content/components/reset.css" rel="stylesheet" />
     <link href="Content/components/site.css" rel="stylesheet" />
     <link href="Content/components/container.css" rel="stylesheet" />
@@ -167,6 +168,7 @@
 
     <!-- Scripts -->
     <script src="Scripts/jquery-1.8.1.min.js"></script>
+    <script src="Scripts/semantic.js"></script>
     <script src="Content/components/transition.js"></script>
     <script src="Content/components/form.js"></script>
     <script src="Content/components/visibility.js"></script>
