--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Might have to fix these links on linux to match directory style-->
     <!-- ../dist/components/-->
     <title>MeTube</title>
+    <link href="Content/semantic.css" rel="stylesheet" />
     <link href="Content/components/reset.css" rel="stylesheet" />
     <link href="Content/components/site.css" rel="stylesheet" />
     <link href="Content/components/container.css" rel="stylesheet" />
@@ -137,6 +138,7 @@
     <!-- Might have to fix these links on linux to match directory style-->
     <!-- ../dist/components/-->
     <script src="Scripts/jquery-1.8.1.min.js"></script>
+    <script src="Scripts/semantic.js"></script>
     <script src="Content/components/visibility.js"></script>
     <script src="Content/components/sidebar.js"></script>
     <script src="Content/components/transition.js"></script>
