Added database interaction and registration/login

--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
             <a class="active item">Home</a>
             <a class="item">Channel</a>
             <a class="item">Videos</a>
-            <a class="item">Favorties</a>
+            <a class="item">Favorites</a>
             <div class="right menu">
                 <div class="item">
-                    <a class="ui button" href="login.html">Log in</a>
+                    <a class="ui button" href="login.php">Log in</a>
                 </div>
                 <div class="item">
-                    <a class="ui primary button" href="register.html">Sign Up</a>
+                    <a class="ui primary button" href="register.php">Sign Up</a>
                 </div>
             </div>
         </div>
@@ -190,9 +190,9 @@
         <a class="active item">Home</a>
         <a class="item">Channel</a>
         <a class="item">Videos</a>
-        <a class="item">Favorties</a>
-        <a class="item" href="login.html">Login</a>
-        <a class="item" href="register.html">Signup</a>
+        <a class="item">Favorites</a>
+        <a class="item" href="login.php">Login</a>
+        <a class="item" href="register.php">Signup</a>
     </div>
 
 
@@ -208,10 +208,10 @@
                     <a class="active item">Home</a>
                     <a class="item">Channel</a>
                     <a class="item">Videos</a>
-                    <a class="item">Favorties</a>
+                    <a class="item">Favorites</a>
                     <div class="right item">
-                        <a class="ui inverted button" href="login.html">Log in</a>
-                        <a class="ui inverted button" href="register.html">Sign Up</a>
+                        <a class="ui inverted button" href="login.php">Log in</a>
+                        <a class="ui inverted button" href="register.php">Sign Up</a>
                     </div>
                 </div>
             </div>
