update index and add git ignore

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     MeTube
                 </h1>
                 <h2>Upload Whatever, Whenever</h2>
-                <div class="ui huge primary button">Signup Now<i class="right arrow icon"></i></div>
+                <div class="ui huge primary button">Signup<i class="right arrow icon"></i></div>
             </div>
 
         </div>
