--- a/menu.html
+++ b/menu.html
@@ -39,6 +39,7 @@
         </div>
     </div>
 </div>
+<!-- End Following Menu -->
 
 <!-- Sidebar Menu -->
 <div class="ui vertical inverted sidebar menu">
@@ -49,54 +50,45 @@
     <a class="item" href="login.php">Login</a>
     <a class="item" href="register.php">Signup</a>
 </div>
+<!-- End Sidebar Menu -->
 
-<!-- Page Contents -->
-<div class="pusher">
-    <div class="ui inverted vertical masthead center aligned segment">
-
-        <div class="ui container">
-            <div class="ui large secondary inverted pointing menu">
-                <a class="toc item">
-                    <i class="sidebar icon"></i>
-                </a>
-                <a class="active item">Home</a>
-                <a class="item">Channel</a>
-                <a class="item">Videos</a>
-                <a class="item">Favorites</a>
-                <div class="right item">
-                    <a class="ui inverted button" href="login.php">Log in</a>
-                    <a class="ui inverted button" href="register.php">Sign Up</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="ui text container">
-            <h1 class="ui inverted header">
-                MeTube
-            </h1>
-            <h2>Upload Whatever, Whenever</h2>
-            <div class="ui huge primary button">Signup<i class="right arrow icon"></i></div>
-        </div>
-
-    </div>
-
-    <div class="ui inverted vertical footer segment">
-        <div class="ui container">
-            <div class="ui stackable inverted divided equal height stackable grid">
-                <div class="three wide column">
-                    <h4 class="ui inverted header">Creators</h4>
-                    <div class="ui inverted link list">
-                        <a href="https://mbinns.github.io" class="item">Mackenzie Binns</a>
-                        <a href="#" class="item">Ronnie Funderburk</a>
-                        <a href="#" class="item">Kevin Kim</a>
-                    </div>
-                </div>
-
-                <div class="seven wide column">
-                    <h4 class="ui inverted header">About</h4>
-                    <p>This is the MeTube site designed for the Clemson CPSC 4620 Databases class.</p>
-                </div>
+<!-- Main menu -->
+<div class="ui inverted vertical masthead center aligned segment">
+    <div class="ui container">
+        <div class="ui large secondary inverted pointing menu">
+            <a class="toc item">
+                <i class="sidebar icon"></i>
+            </a>
+            <a class="active item">Home</a>
+            <a class="item">Channel</a>
+            <a class="item">Videos</a>
+            <a class="item">Favorites</a>
+            <div class="right item">
+                <a class="ui inverted button" href="login.php">Log in</a>
+                <a class="ui inverted button" href="register.php">Sign Up</a>
             </div>
         </div>
     </div>
 </div>
+<!-- End Main menu -->
+
+<!--Footer -->
+<div class="ui inverted vertical footer segment">
+    <div class="ui container">
+        <div class="ui stackable inverted divided equal height stackable grid">
+            <div class="three wide column">
+                <h4 class="ui inverted header">Creators</h4>
+                <div class="ui inverted link list">
+                    <a href="https://mbinns.github.io" class="item">Mackenzie Binns</a>
+                    <a href="#" class="item">Ronnie Funderburk</a>
+                    <a href="#" class="item">Kevin Kim</a>
+                </div>
+            </div>
+            <div class="seven wide column">
+                <h4 class="ui inverted header">About</h4>
+                <p>This is the MeTube site designed for the Clemson CPSC 4620 Databases class.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Footer -->
