--- a/videos.html
+++ b/videos.html
@@ -1,10 +1,160 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
+    <!-- Standard Meta -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+    <!-- Site Properties -->
+    <!-- ../dist/components/-->
+    <title>MeTube</title>
+    <link href="Content/semantic.css" rel="stylesheet" />
+    <link href="Content/components/reset.css" rel="stylesheet" />
+    <link href="Content/components/site.css" rel="stylesheet" />
+    <link href="Content/components/container.css" rel="stylesheet" />
+    <link href="Content/components/grid.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="Content/components/image.css">
+    <link rel="stylesheet" type="text/css" href="Content/components/menu.css">
+    <link href="Content/components/header.css" rel="stylesheet" />
+    <link href="Content/components/dropdown.css" rel="stylesheet" />
+    <link href="Content/components/segment.css" rel="stylesheet" />
+    <link href="Content/components/button.css" rel="stylesheet" />
+    <link href="Content/components/list.css" rel="stylesheet" />
+    <link href="Content/components/icon.css" rel="stylesheet" />
+    <link href="Content/components/sidebar.css" rel="stylesheet" />
+    <link href="Content/components/transition.css" rel="stylesheet" />
+
+    <!-- Modfying some stuff for the home page -->
+    <style type="text/css">
+		.pusher {
+			background-color: #1b1c1d !important;
+
+		}
+        .hidden.menu {
+            display: none;
+        }
+
+        .masthead.segment {
+            min-height: 700px;
+            padding: 1em 0em;
+        }
+
+        .masthead .logo.item img {
+            margin-right: 1em;
+        }
+
+        .masthead .ui.menu .ui.button {
+            margin-left: 0.5em;
+        }
+
+        .masthead h1.ui.header {
+            margin-top: 3em;
+            margin-bottom: 0em;
+            font-size: 4em;
+            font-weight: normal;
+        }
+
+        .masthead h2 {
+            font-size: 1.7em;
+            font-weight: normal;
+        }
+
+        .ui.vertical.stripe {
+            padding: 8em 0em;
+        }
+
+            .ui.vertical.stripe h3 {
+                font-size: 2em;
+            }
+
+            .ui.vertical.stripe .button + h3,
+            .ui.vertical.stripe p + h3 {
+                margin-top: 3em;
+            }
+
+            .ui.vertical.stripe .floated.image {
+                clear: both;
+            }
+
+            .ui.vertical.stripe p {
+                font-size: 1.33em;
+            }
+
+            .ui.vertical.stripe .horizontal.divider {
+                margin: 3em 0em;
+            }
+
+        .quote.stripe.segment {
+            padding: 0em;
+        }
+
+            .quote.stripe.segment .grid .column {
+                padding-top: 5em;
+                padding-bottom: 5em;
+            }
+
+        .footer.segment {
+            padding: 5em 0em;
+			bottom: 0;
+        }
+
+        .secondary.pointing.menu .toc.item {
+            display: none;
+        }
+
+        @media only screen and (max-width: 700px) {
+            .ui.fixed.menu {
+                display: none !important;
+            }
+
+            .secondary.pointing.menu .item,
+            .secondary.pointing.menu .menu {
+                display: none;
+            }
+
+            .secondary.pointing.menu .toc.item {
+                display: block;
+            }
+
+            .masthead.segment {
+                min-height: 350px;
+            }
+
+            .masthead h1.ui.header {
+                font-size: 2em;
+                margin-top: 1.5em;
+            }
+
+            .masthead h2 {
+                margin-top: 0.5em;
+                font-size: 1.5em;
+            }
+        }
+    </style>
+
+    <!-- ../dist/components/-->
+    <script src="Scripts/jquery-1.8.1.min.js"></script>
+    <script src="Scripts/semantic.js"></script>
+    <script src="Content/components/visibility.js"></script>
+    <script src="Content/components/sidebar.js"></script>
+    <script src="Content/components/transition.js"></script>
+
+    <!-- Menu -->
+    <link rel="import" href="menu.html">
 </head>
 
 <body>
+    <div class="pusher">
+        <script>
+            var link = document.querySelector('link[rel="import"]');
+            var content = link.import;
+
+            // Grab DOM from warning.html's document.
+            var el = content.querySelector('.masthead');
+
+            document.body.appendChild(el.cloneNode(true));
+        </script>
+    </div>
 </body>
 </html>
