Updated menu to php links and add search bar, index menu ONLY

--- a/index.html
+++ b/index.html
@@ -172,9 +172,17 @@
     <!-- Following Menu -->
     <div class="ui large top fixed hidden menu">
         <div class="ui container">
-            <a class="active item">Home</a>
-            <a class="item">Channel</a>
-            <a class="item">Videos</a>
+            <a class="active item" href="index.html">Home</a>
+            <a class="item" href="channel.php">Channel</a>
+            <div class="ui simple dropdown item">Media
+                <i class="dropdown icon"></i>
+                <div class="menu">
+                  <a class="item" href="all.php">All</a>
+                  <a class="item" href="videos.php">Videos</a>
+                  <a class="item" href="pictures.php">Pictures</a>
+                  <a class="item" href="favorites.php">Favorties</a>
+                </div>
+            </div>
             <a class="item">Favorites</a>
             <div class="right menu">
                 <div class="item">
@@ -189,10 +197,16 @@
 
     <!-- Sidebar Menu -->
     <div class="ui vertical inverted sidebar menu">
-        <a class="active item">Home</a>
-        <a class="item">Channel</a>
-        <a class="item">Videos</a>
-        <a class="item">Favorites</a>
+        <a class="active item" href="index.html">Home</a>
+        <a class="item" href="channel.php">Channel</a>
+        <div class="header item">Media
+            <div class="menu">
+                <a class="item" href="all.php">All</a>
+                <a class="item" href="videos.php">Videos</a>
+                <a class="item" href="pictures.php">Pictures</a>
+                <a class="item" href="favorites.php">Favorties</a>
+            </div>
+        </div>
         <a class="item" href="login.php">Login</a>
         <a class="item" href="register.php">Signup</a>
     </div>
@@ -207,11 +221,25 @@
                     <a class="toc item">
                         <i class="sidebar icon"></i>
                     </a>
-                    <a class="active item">Home</a>
-                    <a class="item">Channel</a>
-                    <a class="item">Videos</a>
-                    <a class="item">Favorites</a>
+                    <a class="active item" href="index.html">Home</a>
+                    <a class="item" href="channel.php">Channel</a>
+                    <div class="ui simple dropdown item">Media
+                        <i class="dropdown icon"></i>
+                        <div class="menu">
+                            <a class="item" href="all.php">All</a>
+                            <a class="item" href="videos.php">Videos</a>
+                            <a class="item" href="pictures.php">Pictures</a>
+                            <a class="item" href="favorites.php">Favorties</a>
+                        </div>
+                    </div>
                     <div class="right item">
+                    <div class="ui category search item">
+                        <div class="ui icon input">
+                            <input class="prompt" type="text" placeholder="Search...">
+                                <i class="search link icon"></i>
+                            </div>
+                        <div class="results"></div>
+                    </div>
                         <a class="ui inverted button" href="login.php">Log in</a>
                         <a class="ui inverted button" href="register.php">Sign Up</a>
                     </div>
