Add javascript and CSS for search bar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <link href="Content/components/icon.css" rel="stylesheet" />
     <link href="Content/components/sidebar.css" rel="stylesheet" />
     <link href="Content/components/transition.css" rel="stylesheet" />
-
+	<link href="Content/components/search.css" rel="stylesheet" />
+   
     <!-- Modfying some stuff for the home page -->
     <style type="text/css">
 		.pusher {
@@ -135,14 +136,13 @@
         }
     </style>
 
-    <!-- Might have to fix these links on linux to match directory style-->
     <!-- ../dist/components/-->
     <script src="Scripts/jquery-1.8.1.min.js"></script>
     <script src="Scripts/semantic.js"></script>
     <script src="Content/components/visibility.js"></script>
     <script src="Content/components/sidebar.js"></script>
     <script src="Content/components/transition.js"></script>
-
+	<script src= "Content/components/search.js"></script>
     <!-- Script so the menu will follow -->
     <script>
         $(document)
