Include type in media metadata

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link href="Content/components/sidebar.css" rel="stylesheet" />
     <link href="Content/components/transition.css" rel="stylesheet" />
 	<link href="Content/components/search.css" rel="stylesheet" />
-   
+
     <!-- Modfying some stuff for the home page -->
     <style type="text/css">
 		.pusher {
@@ -180,7 +180,7 @@
                   <a class="item" href="all.php">All</a>
                   <a class="item" href="videos.php">Videos</a>
                   <a class="item" href="pictures.php">Pictures</a>
-                  <a class="item" href="favorites.php">Favorties</a>
+                  <a class="item" href="favorites.php">Favorites</a>
                 </div>
             </div>
             <a class="item">Favorites</a>
@@ -204,7 +204,7 @@
                 <a class="item" href="all.php">All</a>
                 <a class="item" href="videos.php">Videos</a>
                 <a class="item" href="pictures.php">Pictures</a>
-                <a class="item" href="favorites.php">Favorties</a>
+                <a class="item" href="favorites.php">Favorites</a>
             </div>
         </div>
         <a class="item" href="login.php">Login</a>
@@ -229,7 +229,7 @@
                             <a class="item" href="all.php">All</a>
                             <a class="item" href="videos.php">Videos</a>
                             <a class="item" href="pictures.php">Pictures</a>
-                            <a class="item" href="favorites.php">Favorties</a>
+                            <a class="item" href="favorites.php">Favorites</a>
                         </div>
                     </div>
                     <div class="right item">
