Changed header to include Music and Favorites -> Playlists

--- a/index.html
+++ b/index.html
@@ -174,13 +174,14 @@
         <div class="ui container">
             <a class="active item" href="index.html">Home</a>
             <a class="item" href="channel.php">Channel</a>
+            <a class="item" href="playlist.php">Playlists</a>
             <div class="ui simple dropdown item">Media
                 <i class="dropdown icon"></i>
                 <div class="menu">
                   <a class="item" href="all.php">All</a>
                   <a class="item" href="videos.php">Videos</a>
+                  <a class="item" href="music.php">Music</a>
                   <a class="item" href="pictures.php">Pictures</a>
-                  <a class="item" href="favorites.php">Favorites</a>
                 </div>
             </div>
             <a class="item">Favorites</a>
@@ -199,12 +200,13 @@
     <div class="ui vertical inverted sidebar menu">
         <a class="active item" href="index.html">Home</a>
         <a class="item" href="channel.php">Channel</a>
+        <a class="item" href="playlist.php">Playlists</a>
         <div class="header item">Media
             <div class="menu">
                 <a class="item" href="all.php">All</a>
                 <a class="item" href="videos.php">Videos</a>
+                <a class="item" href="music.php">Music</a>
                 <a class="item" href="pictures.php">Pictures</a>
-                <a class="item" href="favorites.php">Favorites</a>
             </div>
         </div>
         <a class="item" href="login.php">Login</a>
@@ -223,13 +225,14 @@
                     </a>
                     <a class="active item" href="index.html">Home</a>
                     <a class="item" href="channel.php">Channel</a>
+                    <a class="item" href="playlist.php">Playlists</a>
                     <div class="ui simple dropdown item">Media
                         <i class="dropdown icon"></i>
                         <div class="menu">
                             <a class="item" href="all.php">All</a>
                             <a class="item" href="videos.php">Videos</a>
+                            <a class="item" href="music.php">Music</a>
                             <a class="item" href="pictures.php">Pictures</a>
-                            <a class="item" href="favorites.php">Favorites</a>
                         </div>
                     </div>
                     <div class="right item">
